changes links mail and tel for contact and main page

--- a/Cv-elec/styles/styles.css
+++ b/Cv-elec/styles/styles.css
@@ -738,3 +738,12 @@ textarea{
     opacity: 80%;
 }
 
+#contact-contact a {
+    color: inherit;
+    font-style: italic;
+
+}
+#intro-right-bar a {
+    color: inherit;
+    font-style: italic;
+}
