--- a/Cv-elec/styles/styles-mobile-lanscape.css
+++ b/Cv-elec/styles/styles-mobile-lanscape.css
@@ -616,7 +616,15 @@ margin-left: 7vw;
     }
 
 
+    #mobile-cv-contacts-mail-text a {
+        color: inherit;
+        font-style: italic;
+    }
 
+    #mobile-secteurs-etc a {
+        color: inherit;
+        font-style: italic;
+    }
 
 
 
