--- a/law-firm-website/styles/index.css
+++ b/law-firm-website/styles/index.css
@@ -89,16 +89,21 @@ main {
   display: -ms-grid;
   display: grid;
   width: 100%;
-  -ms-grid-columns: (1fr)[12];
+  
       grid-template-columns: repeat(12 1fr);
-  -ms-grid-rows: (1fr)[7];
+ 
       grid-template-rows: repeat(7 1fr);
-      grid-template-areas: " m " " s " " a " " i " " o " " c " " t ";
+      grid-template-areas: " m "
+ " s "
+ " a "
+ " i "
+ " o "
+ " c "
+ " t ";
 }
 
 main .main-image {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
+
   grid-area: m;
   max-width: 100%;
   height: auto;
@@ -106,8 +111,7 @@ main .main-image {
 }
 
 main .sectors {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
+
   grid-area: s;
   max-width: 100%;
   width: 100%;
@@ -115,32 +119,27 @@ main .sectors {
 }
 
 main .about-us {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
+ 
   grid-area: a;
 }
 
 main .secondary-image {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
+ 
   grid-area: i;
 }
 
 main .our-lawyers {
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
+ 
   grid-area: o;
 }
 
 main .contact {
-  -ms-grid-row: 6;
-  -ms-grid-column: 1;
+ 
   grid-area: c;
 }
 
 main .to-up {
-  -ms-grid-row: 7;
-  -ms-grid-column: 1;
+ 
   grid-area: t;
 }
 
@@ -692,51 +691,50 @@ footer a {
     display: -ms-grid;
     display: grid;
     width: 100%;
-    -ms-grid-columns: (1fr)[12];
+    
         grid-template-columns: repeat(12 1fr);
-    -ms-grid-rows: (1fr)[7];
+   
         grid-template-rows: repeat(7 1fr);
-        grid-template-areas: " m " " s " " a " " i " " o " " c " " t ";
+        grid-template-areas: " m "
+ " s "
+ " a "
+ " i "
+ " o "
+ " c "
+ " t ";
   }
   main .main-image {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
+  
     grid-area: m;
     max-width: 100%;
     height: auto;
     min-height: 900px;
   }
   main .sectors {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
+   
     grid-area: s;
     max-width: 100%;
     width: 100%;
     height: auto;
   }
   main .about-us {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
+  
     grid-area: a;
   }
   main .secondary-image {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
+  
     grid-area: i;
   }
   main .our-lawyers {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
+  
     grid-area: o;
   }
   main .contact {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
+ 
     grid-area: c;
   }
   main .to-up {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
+   
     grid-area: t;
   }
   main .main-image {
@@ -1275,51 +1273,50 @@ footer a {
     display: -ms-grid;
     display: grid;
     width: 100%;
-    -ms-grid-columns: (1fr)[12];
+    
         grid-template-columns: repeat(12 1fr);
-    -ms-grid-rows: (1fr)[7];
+    
         grid-template-rows: repeat(7 1fr);
-        grid-template-areas: " m " " s " " a " " i " " o " " c " " t ";
+        grid-template-areas: " m "
+ " s "
+ " a "
+ " i "
+ " o "
+ " c "
+ " t ";
   }
   main .main-image {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
+    
     grid-area: m;
     max-width: 100%;
     height: auto;
     min-height: 900px;
   }
   main .sectors {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
+  
     grid-area: s;
     max-width: 100%;
     width: 100%;
     height: auto;
   }
   main .about-us {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
+ 
     grid-area: a;
   }
   main .secondary-image {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
+
     grid-area: i;
   }
   main .our-lawyers {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
+   
     grid-area: o;
   }
   main .contact {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
+  
     grid-area: c;
   }
   main .to-up {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
+  
     grid-area: t;
   }
   main .main-image {
@@ -1866,51 +1863,50 @@ footer a {
     display: -ms-grid;
     display: grid;
     width: 100%;
-    -ms-grid-columns: (1fr)[12];
+  
         grid-template-columns: repeat(12 1fr);
-    -ms-grid-rows: (1fr)[7];
+   
         grid-template-rows: repeat(7 1fr);
-        grid-template-areas: " m " " s " " a " " i " " o " " c " " t ";
+        grid-template-areas: " m "
+ " s "
+ " a "
+ " i "
+ " o "
+ " c "
+ " t ";
   }
   main .main-image {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
+  
     grid-area: m;
     max-width: 100%;
     height: auto;
     min-height: 900px;
   }
   main .sectors {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
+   
     grid-area: s;
     max-width: 100%;
     width: 100%;
     height: auto;
   }
   main .about-us {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
+    
     grid-area: a;
   }
   main .secondary-image {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
+   
     grid-area: i;
   }
   main .our-lawyers {
-    -ms-grid-row: 5;
-    -ms-grid-column: 1;
+  
     grid-area: o;
   }
   main .contact {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
+    
     grid-area: c;
   }
   main .to-up {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
+ 
     grid-area: t;
   }
   main .main-image {
