--- a/auto-repair-shop-website/styles/index.scss
+++ b/auto-repair-shop-website/styles/index.scss
@@ -1,220 +1,365 @@
-html{
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+html {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
-body{
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
+
 @mixin gradient {
-    background: rgb(254,64,25);
-    background: linear-gradient(90deg, rgba(254,64,25,1) 0%, rgba(255,134,55,1) 100%);
+  background: rgb(254, 64, 25);
+  background: linear-gradient(90deg, rgba(254, 64, 25, 1) 0%, rgba(255, 134, 55, 1) 100%);
 }
-@mixin inserve-gradient{
-    background: rgb(255,95,55);
-    background: linear-gradient(90deg, rgba(255,95,55,1) 0%, rgba(254,64,25,1) 100%);
+
+@mixin inserve-gradient {
+  background: rgb(255, 95, 55);
+  background: linear-gradient(90deg, rgba(255, 95, 55, 1) 0%, rgba(254, 64, 25, 1) 100%);
 }
+
 @mixin box-shadow {
-    box-shadow: 18px 15px 24px -11px rgba(0,0,0,0.73);
-        -webkit-box-shadow: 18px 15px 24px -11px rgba(0,0,0,0.73);
-        -moz-box-shadow: 18px 15px 24px -11px rgba(0,0,0,0.73);
+  box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
+  -webkit-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
 }
 
 
 
 $main-color : white;
-main{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 5000px;
-    
+
+main {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 5000px;
+
 }
 
 header {
-    background-color: transparent;
-    max-width: 100%;
-    min-width: 100%;
-    height: 80px;
-    position: fixed;
-    z-index: 9999;
-    display: flex;
-    margin-top: 20px;
-    align-items: baseline;
+  background-color: transparent;
+  max-width: 100%;
+  min-width: 100%;
+  height: 80px;
+  position: fixed;
+  z-index: 9999;
+  display: flex;
+  margin-top: 20px;
+  align-items: baseline;
 
-    h1{
-        color: $main-color;
-        text-transform: uppercase;
-        margin-left: 30px;
-        cursor: pointer;
-    }
-    
+  h1 {
+    color: $main-color;
+    text-transform: uppercase;
+    margin-left: 30px;
+    cursor: pointer;
+  }
 
-#a-city{
+
+  #a-city {
     margin-left: auto;
     margin-right: 100px;
     font-size: 1.2rem;
     text-decoration: underline;
-}
-#a-tel{
+  }
+
+  #a-tel {
     font-size: 1.8rem;
     margin-right: 50px;
-    word-break:normal;
-}
+    word-break: normal;
+  }
 
 
 
-    a{
-        text-decoration: none;
-        display: block;
-       
-        justify-self: flex-end;
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: $main-color;
-    }
- #header-about{
-     background-color: transparent;
-     border: 1px solid white;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding: 10px 30px;
-     margin-right: 60px;
-     color: $main-color;
-     word-wrap: normal;
-}
+  a {
+    text-decoration: none;
+    display: block;
 
-#header-about:hover{
-        @include inserve-gradient();
-   cursor: pointer;
-   
-}
+    justify-self: flex-end;
 
-
-}
-
-#first-section{
-    @include gradient();
-    max-width: 100%;
-    height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: $main-color;
+  }
 
-    h2,h3{
-        font-size: 4rem;
-        margin: 10px 0;
-        color: $main-color;
-        z-index: 100;
-        text-align: center;
-    }
-    h2{
-        margin-top: 350px;
-        font-weight: 300;
-    }
-    h3{
-        text-transform: uppercase;
-        font-size: 900;
-    }
+  #header-about {
+    background-color: transparent;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 30px;
+    margin-right: 60px;
+    color: $main-color;
+    word-wrap: normal;
+  }
 
-    button{
-        margin-top: 50px;
-        background-color: transparent;
-        padding: 15px 40px;
-        border: 1px solid white;
-        border-radius: 100px; 
-        font-size: 1.2rem;
-        font-weight: 700;
-        color: $main-color;
-        z-index: 100;
-        
-    }
-    button:hover{
-        @include box-shadow();
-        transition-duration: 0.2s;
-    }
+  #header-about:hover {
+    @include inserve-gradient();
+    cursor: pointer;
 
-    #img-car{
-        position: absolute;
-        z-index: 0;
-        right: 20%;
-       
-    }
-//----------------------------------------------------------//
-div.at-container {
+  }
+
+
+}
+
+#first-section {
+  @include gradient();
+  max-width: 100%;
+  height: 100vh;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  height: 180px;
-  margin-top: auto;
+  align-items: center;
+
+  h2,
+  h3 {
+    font-size: 4rem;
+    margin: 10px 0;
+    color: $main-color;
+    z-index: 100;
+    text-align: center;
+  }
+
+  h2 {
+    margin-top: 350px;
+    font-weight: 300;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    font-size: 900;
+  }
+
+  button {
+    margin-top: 50px;
+    background-color: transparent;
+    padding: 15px 40px;
+    border: 1px solid white;
+    border-radius: 100px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: $main-color;
+    z-index: 100;
+
+  }
+
+  button:hover {
+    @include box-shadow();
+    transition-duration: 0.2s;
+  }
+
+  #img-car {
+    position: absolute;
+    z-index: 0;
+    right: 20%;
+
+  }
+
+  //----------------------------------------------------------//
+  div.at-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 180px;
+    margin-top: auto;
+  }
+
+  .at-item {
+    width: 2px;
+    height: 150px;
+    background-color: white;
+    animation-name: shake-vertical;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
+  }
+
+  @keyframes shake-vertical {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+
+    10% {
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
+    }
+
+    20% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+
+    30% {
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
+    }
+
+    40% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+
+    50% {
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
+    }
+
+    60% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+
+    70% {
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
+    }
+
+    80% {
+      -webkit-transform: translateY(6.4px);
+      transform: translateY(6.4px);
+    }
+
+    90% {
+      -webkit-transform: translateY(-6.4px);
+      transform: translateY(-6.4px);
+    }
+
+    100% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+  }
+
+  //------------------------------------------------------------//
+
+
+
 }
-.at-item {
-  width: 2px;
-  height: 150px;
-  background-color:white;
-  animation-name: shake-vertical;
-  animation-duration: 5s;
-  animation-timing-function: linear;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-  animation-fill-mode: none;
-}
-@keyframes shake-vertical {
-  0%{
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+
+
+
+#section-form {
+  width: 100%;
+  height: 90vh;
+  background-color: #252d45;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h4 {
+    color: $main-color;
+    font-size: 2.3rem;
+    margin: 5rem 0;
+    font-weight: 200;
+
   }
-  10%{
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+
+  p {
+    color: $main-color;
+    font-size: 1.9rem;
+    margin-bottom: 0;
+    display: block;
+    width: 50%;
+    text-align: left;
+
+    span {
+      font-size: 1.5rem;
+    }
   }
-  20%{
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
+
+  #first-hr {
+    width: 50%;
+    display: block;
+    border: 1px solid #6a6765;
   }
-  30%{
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+
+  #div-select {
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    select {
+      font-size: 1.3rem;
+      margin-top: 5rem;
+      display: block;
+      color: #9497a1;
+      background-color: #252d45;
+      width: 50%;
+      border: none;
+      padding: 5px 10px;
+      outline: none;
+
+      option {
+        background-color: #171820;
+
+        border: none;
+        outline: none;
+
+      }
+
+    }
+
+
   }
-  40%{
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
+
+  #second-hr {
+    width: 25%;
+    margin-left: 25%;
+    display: block;
+    border: 1px solid #6a6765;
+    float: left;
   }
-  50%{
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
+
+#div-select-date{
+  width: 50%;
+  display: flex;
+justify-content: space-evenly;
+  color: #9497a1;
+  div{
+    text-align: center;
+    padding: 0 10px;
+    border-radius: 50px;
+    border: 2px solid transparent;
+    margin-bottom: 0;
+    width: 25%;
+  
   }
-  60%{
-    -webkit-transform: translateY(8px);
-    transform: translateY(8px);
-  }
-  70%{
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-  80%{
-    -webkit-transform: translateY(6.4px);
-    transform: translateY(6.4px);
-  }
-  90%{
-    -webkit-transform: translateY(-6.4px);
-    transform: translateY(-6.4px);
-  }
-  100%{
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+  div:hover{
+    color: $main-color;
+    transition-duration: 0.5s;
+    cursor: pointer;
+    border: 2px solid orangered;
   }
 }
 
-//------------------------------------------------------------//
-
+#div-hours{
+ margin: 5rem 0;
+ height :2rem;
+  width: 50%;
+  color: #9497a1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  span{
+    padding: 5px 10px;
+    border-radius: 50px;
+    border: 2px solid transparent;
+  }
+  span:hover{
+    color: $main-color;
+    transition-duration: 0.2s;
+    cursor: pointer;
+    border: 2px solid orangered;
+  }
+}
 
 
 }
