--- a/auto-repair-shop-website/styles/index.css
+++ b/auto-repair-shop-website/styles/index.css
@@ -380,6 +380,11 @@ header #header-about:hover {
   color: #9497a1;
 }
 
+#section-form #div-select-date .selected-date {
+  background-color: orangered;
+  color: white;
+}
+
 #section-form #div-select-date div {
   text-align: center;
   padding: 0 10px;
@@ -413,6 +418,11 @@ header #header-about:hover {
           align-items: center;
 }
 
+#section-form #div-hours .selected-hour {
+  background-color: orangered;
+  color: white;
+}
+
 #section-form #div-hours span {
   padding: 5px 10px;
   border-radius: 50px;
@@ -421,9 +431,102 @@ header #header-about:hover {
 
 #section-form #div-hours span:hover {
   color: white;
-  -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
   cursor: pointer;
   border: 2px solid orangered;
+}
+
+#section-partenaires {
+  width: 100%;
+  background-color: #161b26;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#section-partenaires h4 {
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 200;
+  margin-top: 10%;
+}
+
+#section-partenaires .partenaires {
+  width: 60%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10%;
+}
+
+#section-partenaires .partenaires div {
+  width: 30%;
+  height: 400px;
+  border: 1px solid white;
+  border-radius: 20px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#section-partenaires .partenaires div h5 {
+  color: white;
+  font-size: 2.2rem;
+  font-weight: 500;
+  margin-left: 2rem;
+  margin: 0 2rem;
+}
+
+#section-partenaires .partenaires div h6 {
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-left: 2rem;
+  margin: 0 2rem;
+}
+
+#section-partenaires .partenaires div p {
+  color: orangered;
+  margin-left: 2rem;
+  font-weight: 600;
+  position: relative;
+  margin: 0 2rem;
+}
+
+#section-partenaires .partenaires div:hover {
+  background-color: orangered;
+  border: 1px solid orangered;
+  -webkit-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+  top: -5px;
+  cursor: pointer;
+}
+
+#section-partenaires .partenaires div:hover p {
+  color: white;
 }
 /*# sourceMappingURL=index.css.map */
