--- a/auto-repair-shop-website/styles/index.scss
+++ b/auto-repair-shop-website/styles/index.scss
@@ -323,6 +323,11 @@ header {
   display: flex;
 justify-content: space-evenly;
   color: #9497a1;
+  .selected-date{
+    background-color: orangered;
+    color: white;
+  }
+  
   div{
     text-align: center;
     padding: 0 10px;
@@ -333,7 +338,7 @@ justify-content: space-evenly;
   
   }
   div:hover{
-    color: $main-color;
+    color: white;
     transition-duration: 0.5s;
     cursor: pointer;
     border: 2px solid orangered;
@@ -341,6 +346,10 @@ justify-content: space-evenly;
 }
 
 #div-hours{
+  .selected-hour{
+    background-color: orangered;
+    color: white;
+  }
  margin: 5rem 0;
  height :2rem;
   width: 50%;
@@ -355,11 +364,86 @@ justify-content: space-evenly;
   }
   span:hover{
     color: $main-color;
-    transition-duration: 0.2s;
+    transition-duration: 0.5s;
     cursor: pointer;
     border: 2px solid orangered;
   }
 }
+
+
+}
+
+
+#section-partenaires{
+  width: 100%;
+  background-color: #161b26;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h4{
+    color: $main-color;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 200;
+    margin-top: 10%; 
+  }
+  .partenaires{
+    width: 60%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10%;
+    div{
+      width: 30%;
+      height: 400px;
+      border: 1px solid white;
+      border-radius: 20px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content:  space-around;
+   
+      
+      h5{
+        color: $main-color;
+        font-size: 2.2rem;
+        font-weight: 500;
+        margin-left: 2rem;
+        margin: 0 2rem;
+      }
+      h6{
+        color: $main-color;
+        font-size: 1.6rem;
+        font-weight: 500;
+        margin-left: 2rem;
+        margin: 0 2rem;
+      }
+      p{
+        color: orangered;
+        margin-left: 2rem;
+        font-weight: 600;
+        position: relative;
+        margin: 0 2rem;
+        
+
+      }
+      
+    }
+    div:hover{
+      background-color: orangered;
+      border: 1px solid orangered;
+      transition-duration: 0.8s;
+      top: -5px;
+      cursor: pointer;
+    }
+    div:hover p{
+      color: $main-color;
+    }
+  }
+
 
 
 }
