--- a/auto-repair-shop-website/styles/index.css
+++ b/auto-repair-shop-website/styles/index.css
@@ -2,19 +2,21 @@ html {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  scroll-behavior: smooth;
 }
 
 main {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 5000px;
+  height: auto;
 }
 
 header {
@@ -48,7 +50,7 @@ header #a-city {
 }
 
 header #a-tel {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin-right: 50px;
   word-break: normal;
 }
@@ -99,7 +101,8 @@ header #header-about:hover {
   background: -webkit-gradient(linear, left top, right top, from(#fe4019), to(#ff8637));
   background: linear-gradient(90deg, #fe4019 0%, #ff8637 100%);
   max-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,7 +137,9 @@ header #header-about:hover {
   font-size: 900;
 }
 
-#first-section button {
+#first-section a {
+  text-decoration: none;
+  display: block;
   margin-top: 50px;
   background-color: transparent;
   padding: 15px 40px;
@@ -144,14 +149,15 @@ header #header-about:hover {
   font-weight: 700;
   color: white;
   z-index: 100;
+  margin-bottom: 5rem;
 }
 
-#first-section button:hover {
+#first-section a:hover {
   box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
   -webkit-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 18px 15px 24px -11px rgba(0, 0, 0, 0.73);
-  -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 #first-section #img-car {
@@ -172,6 +178,7 @@ header #header-about:hover {
           justify-content: center;
   height: 180px;
   margin-top: auto;
+  margin-bottom: 1rem;
 }
 
 #first-section .at-item {
@@ -290,7 +297,7 @@ header #header-about:hover {
 
 #section-form {
   width: 100%;
-  height: 90vh;
+  height: auto;
   background-color: #252d45;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -385,13 +392,17 @@ header #header-about:hover {
   color: white;
 }
 
+#section-form #div-select-date .first-date {
+  margin-left: 3rem;
+}
+
 #section-form #div-select-date div {
   text-align: center;
   padding: 0 10px;
   border-radius: 50px;
   border: 2px solid transparent;
   margin-bottom: 0;
-  width: 25%;
+  width: auto;
 }
 
 #section-form #div-select-date div:hover {
@@ -416,6 +427,8 @@ header #header-about:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 #section-form #div-hours .selected-hour {
@@ -474,11 +487,14 @@ header #header-about:hover {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 10%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 #section-partenaires .partenaires div {
-  width: 30%;
+  width: 300px;
   height: 400px;
+  margin-bottom: 2rem;
   border: 1px solid white;
   border-radius: 20px;
   position: relative;
@@ -528,5 +544,134 @@ header #header-about:hover {
 
 #section-partenaires .partenaires div:hover p {
   color: white;
+}
+
+footer {
+  background-color: #111525;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: white;
+}
+
+footer .first-footer {
+  border-bottom: 1px solid #6a6765;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .first-footer p {
+  font-size: 2rem;
+  padding: 2rem 5rem;
+}
+
+footer .first-footer a {
+  color: white;
+  display: block;
+  font-size: 1.8rem;
+  text-decoration: none;
+}
+
+footer .second-footer {
+  border-bottom: 1px solid #6a6765;
+}
+
+footer .second-footer .sec-f-first {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .second-footer .sec-f-first p {
+  padding: 2rem 5rem 0.55rem 5rem;
+  font-size: 1rem;
+  color: #6a6765;
+  text-transform: uppercase;
+}
+
+footer .second-footer .sec-f-second {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .second-footer .sec-f-second .fir-icons {
+  padding-left: 3rem;
+  margin-bottom: 3rem;
+}
+
+footer .second-footer .sec-f-second .fir-icons i {
+  padding: 2rem 2rem;
+  margin-right: 1rem;
+  font-size: 2.5rem;
+  color: #6a6765;
+  border: 1px solid #6a6765;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+}
+
+footer .second-footer .sec-f-second .fir-icons i:hover {
+  background-color: orangered;
+  border: 1px solid orangered;
+  color: white;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+footer .second-footer .sec-f-second .sec-icons {
+  padding-right: 3rem;
+}
+
+footer .second-footer .sec-f-second .sec-icons i {
+  padding: 2rem 2rem;
+  font-size: 2.5rem;
+  color: #6a6765;
+  border: 1px solid #6a6765;
+  border-radius: 50%;
+  margin-left: 1rem;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+}
+
+footer .second-footer .sec-f-second .sec-icons i:hover {
+  background-color: orangered;
+  border: 1px solid orangered;
+  color: white;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+footer .third-footer {
+  border-bottom: 1px solid #6a6765;
+}
+
+footer .third-footer p {
+  padding-left: 5rem;
+  color: #6a6765;
+  font-size: 0.9rem;
+}
+
+footer .third-footer a {
+  text-decoration: none;
+  color: greenyellow;
 }
 /*# sourceMappingURL=index.css.map */
